[gd_scene load_steps=10 format=3 uid="uid://vfwcjy8j2kfa"]

[ext_resource type="Script" path="res://world/level_two.gd" id="1_ja42x"]
[ext_resource type="PackedScene" uid="uid://dxg5vopu65gxn" path="res://world/world_tile_map.tscn" id="1_yjcfv"]
[ext_resource type="PackedScene" uid="uid://ccy3h1h5vjs5g" path="res://world/door.tscn" id="3_cnoc3"]
[ext_resource type="Resource" uid="uid://fv4x5d3aikor" path="res://world/one_two.tres" id="4_h4avt"]
[ext_resource type="Resource" uid="uid://bxh4xniegp2yu" path="res://world/two_three.tres" id="5_fqs8o"]
[ext_resource type="PackedScene" uid="uid://o6ruv3kr2kpb" path="res://world/camera_limits.tscn" id="6_6drvt"]
[ext_resource type="PackedScene" uid="uid://cm8gep6xbimiy" path="res://enemies/boss_enemy.tscn" id="6_ouelw"]
[ext_resource type="PackedScene" uid="uid://y0dgqgroah0j" path="res://world/brick.tscn" id="7_xog08"]
[ext_resource type="PackedScene" uid="uid://b26ng0lw2rerx" path="res://world/trigger.tscn" id="9_u1lwj"]

[node name="LevelTwo" type="Node2D"]
script = ExtResource("1_ja42x")

[node name="WorldTileMap" parent="." instance=ExtResource("1_yjcfv")]
layer_0/tile_data = PackedInt32Array(1376275, 65536, 1, 1376274, 65536, 1, 1376265, 65536, 0, 1376266, 65536, 0, 1376267, 65536, 0, 1376268, 393216, 2, 1376270, 65536, 1, 1376269, 65536, 1, 1376271, 65536, 1, 1376273, 65536, 1, 1376272, 65536, 1, 1376276, 65536, 1, 1376277, 65536, 1, 1376280, 65536, 1, 1376279, 65536, 1, 1376278, 65536, 1, 1376281, 65536, 1, 1376282, 65536, 1, 1245211, 0, 1, 1179675, 0, 0, 1310747, 393216, 2, 1245212, 65536, 1, 1310748, 65536, 1, 1376284, 65536, 1, 1376283, 65536, 1, 1245213, 65536, 1, 1179677, 393216, 2, 1114141, 0, 1, 1048605, 0, 1, 983069, 393216, 1, 917533, 65536, 1, 917534, 65536, 1, 851998, 65536, 1, 983070, 65536, 1, 1179676, 65536, 0, 1048606, 65536, 1, 983071, 65536, 1, 917535, 65536, 1, 851999, 65536, 1, 786463, 65536, 1, 786462, 65536, 1, 720925, 65536, 1, 720924, 65536, 1, 786459, 0, 1, 917512, 131072, 1, 655369, 65536, 2, 851976, 131072, 1, 983048, 131072, 2, 1179656, 131072, 0, 1245192, 131072, 1, 1310728, 131072, 1, 1376264, 327680, 2, 1310727, 65536, 1, 1376263, 65536, 1, 1310726, 65536, 1, 1245190, 65536, 1, 1179654, 65536, 0, 983046, 65536, 2, 917510, 65536, 1, 983047, 65536, 2, 1179655, 65536, 0, 1245191, 65536, 1, 1441799, 65536, 1, 1441800, 65536, 1, 1441801, 65536, 1, 1507337, 65536, 1, 1507338, 65536, 1, 1638414, 65536, 1, 1638415, 65536, 1, 1638416, 65536, 1, 1703953, 65536, 2, 1703954, 65536, 2, 1703955, 65536, 2, 1703956, 65536, 2, 1703957, 65536, 2, 1703958, 65536, 2, 1703959, 65536, 2, 1703960, 131072, 2, 1638425, 65536, 2, 1638426, 393216, 1, 1572890, 65536, 1, 1572889, 65536, 1, 1572888, 65536, 1, 1572887, 65536, 1, 1507351, 65536, 1, 1507339, 65536, 1, 1507336, 65536, 1, 1507335, 65536, 1, 1441798, 65536, 1, 1572892, 65536, 1, 1572891, 65536, 1, 1507350, 65536, 1, 1507349, 65536, 1, 1507348, 65536, 1, 1507347, 65536, 1, 1507346, 65536, 1, 1507345, 65536, 1, 1507344, 65536, 1, 1507343, 65536, 1, 1507342, 65536, 1, 1507341, 65536, 1, 1507340, 65536, 1, 1441803, 65536, 1, 1441802, 65536, 1, 1441804, 65536, 1, 1441805, 65536, 1, 1441806, 65536, 1, 1441807, 65536, 1, 1441808, 65536, 1, 1441809, 65536, 1, 1441810, 65536, 1, 1441811, 65536, 1, 1441812, 65536, 1, 1507352, 65536, 1, 1507353, 65536, 1, 1507354, 65536, 1, 1507355, 65536, 1, 1507356, 65536, 1, 1507357, 65536, 1, 1441813, 65536, 1, 1441814, 65536, 1, 1441815, 65536, 1, 1441816, 65536, 1, 1441817, 65536, 1, 1441818, 65536, 1, 1441819, 65536, 1, 1441820, 65536, 1, 1441821, 65536, 1, 1376286, 65536, 1, 1441822, 65536, 1, 1376285, 65536, 1, 1310749, 65536, 1, 1310750, 65536, 1, 1245214, 65536, 1, 1179678, 65536, 1, 1114142, 65536, 1, 1048607, 65536, 1, 1114143, 65536, 1, 1179679, 65536, 1, 1245215, 65536, 1, 1310751, 65536, 1, 1376287, 65536, 1, 1441823, 65536, 1, 1507359, 65536, 1, 786461, 65536, 1, 786460, 65536, 1, 720923, 0, 1, 720926, 65536, 1, 720927, 65536, 1, 720928, 65536, 1, 655375, 65536, 2, 655376, 65536, 2, 655380, 65536, 2, 655379, 65536, 2, 655378, 65536, 2, 655377, 65536, 2, 655381, 65536, 2, 655383, 65536, 2, 655382, 65536, 2, 655384, 65536, 2, 655385, 65536, 2, 655386, 65536, 2, 655387, 393216, 1, 655388, 65536, 1, 655389, 65536, 1, 655390, 65536, 1, 655374, 65536, 2, 655371, 65536, 2, 655372, 65536, 2, 655373, 65536, 2, 655370, 65536, 2, 655367, 65536, 1, 655368, 327680, 1, 720904, 131072, 1, 786440, 131072, 1, 786439, 65536, 1, 851974, 65536, 1, 851973, 65536, 1, 917509, 65536, 1, 983045, 327680, 1, 1048581, 131072, 1, 851975, 65536, 1, 917511, 65536, 1, 720903, 65536, 1, 786438, 65536, 1, 589831, 65536, 1, 720902, 65536, 1, 917508, 65536, 1, 1114115, 65536, 1, 1048579, 65536, 1, 983044, 65536, 1, 1179650, 65536, 1, 1245186, 393216, 1, 1114114, 65536, 1, 983043, 65536, 1, 1048578, 65536, 1, 851971, 65536, 1, 917507, 65536, 1, 786436, 65536, 1, 851972, 65536, 1, 1048580, 65536, 1, 1245189, 65536, 1, 1179653, 327680, 2, 1114116, 65536, 1, 1376261, 65536, 1, 1310725, 65536, 1, 1507334, 65536, 1, 1441797, 65536, 1, 1572870, 65536, 1, 1376262, 65536, 1, 1114117, 131072, 1, 1179651, 65536, 1, 1310723, 65536, 1, 1245187, 65536, 1, 1376259, 65536, 1, 1507331, 393216, 1, 1441795, 65536, 1, 1572867, 0, 1, 1638403, 0, 1, 1703939, 0, 2, 1507332, 65536, 1, 1376260, 65536, 1, 1441796, 65536, 1, 1310724, 65536, 1, 1572869, 65536, 1, 1507333, 65536, 1, 1179652, 65536, 1, 1245188, 65536, 1, 1572868, 65536, 1, 1638405, 65536, 1, 1638404, 65536, 1, 1703940, 524288, 1, 1769476, 196608, 2, 1703941, 65536, 2, 1703942, 65536, 2, 1638409, 65536, 2, 1638408, 65536, 2, 1703943, 131072, 2, 1638411, 65536, 2, 1638410, 65536, 2, 1638412, 393216, 1, 1638413, 65536, 1, 1638407, 327680, 1, 1638406, 65536, 1, 1572873, 65536, 1, 1572874, 65536, 1, 1572875, 65536, 1, 1572871, 65536, 1, 1572872, 65536, 1, 1572876, 65536, 1, 1572877, 65536, 1, 1572880, 65536, 1, 1572879, 65536, 1, 1572878, 65536, 1, 1572883, 65536, 1, 1572882, 65536, 1, 1572881, 65536, 1, 1572884, 65536, 1, 1572885, 65536, 1, 1638418, 65536, 1, 1638417, 65536, 1, 1703950, 65536, 2, 1703948, 0, 1, 1703949, 327680, 1, 1769483, 0, 3, 1769484, 393216, 3, 1769485, 131072, 2, 1703952, 65536, 2, 1703951, 65536, 2, 1638421, 65536, 1, 1638422, 65536, 1, 1638424, 327680, 1, 1638423, 65536, 1, 1638427, 65536, 1, 1638419, 65536, 1, 1638420, 65536, 1, 1572886, 65536, 1, 1572894, 65536, 1, 1572893, 65536, 1, 1572895, 65536, 1, 1507360, 65536, 1, 1507358, 65536, 1, 1638429, 65536, 2, 1638428, 327680, 1, 1638431, 65536, 2, 1638430, 65536, 2, 1638432, 65536, 2, 1638433, 65536, 2, 1703962, 0, 2, 1703963, 65536, 2, 1703964, 131072, 2, 1572896, 65536, 1, 1572897, 65536, 1, 1572898, 131072, 1, 1507363, 131072, 2, 1507362, 327680, 1, 1441826, 65536, 1, 1376290, 65536, 1, 1376289, 65536, 1, 1310753, 65536, 1, 1245217, 65536, 1, 1179681, 65536, 1, 1507361, 65536, 1, 1441825, 65536, 1, 1638434, 458752, 1, 1310752, 65536, 1, 1245216, 65536, 1, 1179680, 65536, 1, 1376288, 65536, 1, 1114144, 65536, 1, 1048608, 65536, 1, 1703970, 196608, 2, 917536, 65536, 1, 983072, 65536, 1, 655391, 65536, 1, 589854, 65536, 1, 524318, 65536, 1, 458782, 65536, 1, 393246, 65536, 1, 589855, 65536, 1, 852000, 65536, 1, 983073, 65536, 1, 1048609, 65536, 1, 1114145, 65536, 1, 786464, 65536, 1, 589856, 65536, 1, 655392, 65536, 1, 524319, 65536, 1, 458783, 65536, 1, 917537, 65536, 1, 852001, 65536, 1, 720929, 65536, 1, 786465, 65536, 1, 655393, 65536, 1, 1310754, 65536, 1, 1245218, 65536, 1, 1114146, 65536, 1, 1179682, 65536, 1, 983074, 65536, 1, 1048610, 65536, 1, 917538, 65536, 1, 720930, 65536, 1, 786466, 65536, 1, 852002, 65536, 1, 655394, 65536, 1, 589858, 65536, 1, 917539, 131072, 1, 1048611, 131072, 1, 983075, 131072, 1, 1114147, 131072, 1, 1245219, 131072, 1, 1179683, 131072, 1, 1376291, 131072, 1, 1310755, 131072, 1, 1441827, 131072, 1, 524322, 65536, 1, 458786, 65536, 1, 786467, 131072, 1, 852003, 131072, 1, 720931, 131072, 1, 655395, 131072, 1, 524323, 131072, 1, 589859, 131072, 1, 458787, 131072, 1, 393251, 327680, 4, 1441824, 65536, 1, 589857, 65536, 1, 524321, 65536, 1, 524320, 65536, 1, 589852, 65536, 1, 524317, 65536, 1, 589850, 65536, 1, 589851, 65536, 1, 589849, 65536, 1, 589848, 65536, 1, 589847, 65536, 1, 589845, 65536, 1, 589846, 65536, 1, 524315, 65536, 1, 524316, 65536, 1, 589853, 65536, 1, 589843, 65536, 1, 589844, 65536, 1, 589840, 65536, 1, 589841, 65536, 1, 589842, 65536, 1, 589838, 65536, 1, 589839, 65536, 1, 589836, 65536, 1, 589837, 65536, 1, 589835, 65536, 1, 589834, 65536, 1, 589833, 65536, 1, 589832, 65536, 1, 524298, 65536, 1, 524300, 65536, 1, 524299, 65536, 1, 524303, 65536, 1, 524302, 65536, 1, 524301, 65536, 1, 524306, 65536, 1, 524305, 65536, 1, 524304, 65536, 1, 524309, 65536, 1, 524308, 65536, 1, 524307, 65536, 1, 524312, 65536, 1, 524311, 65536, 1, 524310, 65536, 1, 524314, 65536, 1, 524313, 65536, 1, 524297, 65536, 1, 524295, 65536, 1, 524296, 65536, 1, 524292, 65536, 1, 524293, 65536, 1, 524294, 65536, 1, 524291, 65536, 1, 458770, 65536, 1, 458769, 65536, 1, 458768, 65536, 1, 458772, 65536, 1, 458771, 65536, 1, 458775, 65536, 1, 458774, 65536, 1, 458773, 65536, 1, 458777, 65536, 1, 458776, 65536, 1, 458779, 65536, 1, 458778, 65536, 1, 458780, 65536, 1, 458781, 65536, 1, 393248, 65536, 1, 393249, 65536, 1, 393250, 65536, 1, 458784, 65536, 1, 458767, 65536, 1, 458765, 65536, 1, 458766, 65536, 1, 458763, 65536, 1, 458764, 65536, 1, 458762, 65536, 1, 393247, 65536, 1, 393252, 65536, 3, 393253, 65536, 3, 393254, 131072, 3, 458785, 65536, 1, 458761, 65536, 1, 393227, 65536, 1, 393228, 65536, 1, 393230, 65536, 1, 393229, 65536, 1, 393231, 65536, 1, 393232, 65536, 1, 393235, 65536, 1, 393234, 65536, 1, 393233, 65536, 1, 393237, 65536, 1, 393236, 65536, 1, 393238, 65536, 1, 393239, 65536, 1, 393240, 65536, 1, 393226, 65536, 1, 393224, 65536, 1, 393225, 65536, 1, 458758, 65536, 1, 393223, 65536, 1, 589828, 65536, 1, 655364, 65536, 1, 720900, 65536, 1, 786437, 65536, 1, 655365, 65536, 1, 720901, 65536, 1, 589830, 65536, 1, 458759, 65536, 1, 655366, 65536, 1, 458760, 65536, 1, 589829, 65536, 1, 655363, 65536, 1, 458756, 65536, 1, 393220, 65536, 1, 458757, 65536, 1, 393222, 65536, 1, 393221, 65536, 1, 458755, 65536, 1, 589827, 65536, 1, 720899, 65536, 1, 786435, 65536, 1, 983042, 65536, 1, 917506, 65536, 1, 851970, 65536, 1, 786434, 65536, 1, 720898, 65536, 1, 655362, 65536, 1, 917505, 393216, 1, 983041, 0, 1, 1048577, 0, 1, 589826, 65536, 1, 524290, 65536, 1, 458754, 65536, 1, 393218, 65536, 1, 393219, 65536, 1, 458753, 0, 1, 524289, 0, 1, 589825, 0, 1, 655361, 0, 1, 720897, 0, 1, 786433, 0, 1, 851968, 0, 0, 917504, 0, 2, 1114113, 0, 1, 851969, 393216, 2, 1245185, 0, 2, 1179649, 0, 1, 1310722, 0, 1, 1376258, 0, 1, 1441794, 0, 1, 1507330, 0, 2, 983068, 65536, 2, 917532, 65536, 1, 851996, 65536, 1, 983067, 0, 2, 917531, 0, 1, 851995, 0, 1, 851997, 65536, 1, 1310746, 65536, 0, 1310745, 65536, 0, 1310744, 65536, 0, 1310743, 65536, 0, 1310742, 65536, 0, 1310741, 65536, 0, 1310740, 65536, 0, 1310739, 65536, 0, 1310738, 65536, 0, 1310737, 65536, 0, 1310736, 65536, 0, 1310735, 65536, 0, 1310734, 65536, 0, 1310733, 65536, 0, 1310732, 0, 0, 1114126, 131072, 3, 1114125, 0, 3, 983063, 131072, 3, 983062, 65536, 3, 983061, 0, 3, 327715, 131072, 1, 262179, 131072, 1, 196643, 131072, 0, 327714, 65536, 1, 262178, 65536, 1, 196642, 65536, 0, 327713, 65536, 1, 262177, 65536, 1, 196641, 65536, 0, 327712, 65536, 1, 262176, 65536, 1, 196640, 65536, 0, 327711, 65536, 1, 262175, 65536, 1, 196639, 65536, 0, 327710, 65536, 1, 262174, 65536, 1, 196638, 65536, 0, 393245, 65536, 1, 327709, 65536, 1, 262173, 65536, 1, 196637, 65536, 0, 393244, 65536, 1, 327708, 65536, 1, 262172, 65536, 1, 196636, 65536, 0, 393243, 65536, 1, 327707, 65536, 1, 262171, 65536, 1, 196635, 65536, 0, 393242, 65536, 1, 327706, 65536, 1, 262170, 65536, 1, 196634, 65536, 0, 393241, 65536, 1, 327705, 65536, 1, 262169, 65536, 1, 196633, 65536, 0, 327704, 65536, 1, 262168, 65536, 1, 196632, 65536, 0, 327703, 65536, 1, 262167, 65536, 1, 196631, 65536, 0, 327702, 65536, 1, 262166, 65536, 1, 196630, 65536, 0, 327701, 65536, 1, 262165, 65536, 1, 196629, 65536, 0, 327700, 65536, 1, 262164, 65536, 1, 196628, 65536, 0, 327699, 65536, 1, 262163, 65536, 1, 196627, 65536, 0, 327698, 65536, 1, 262162, 65536, 1, 196626, 65536, 0, 327697, 65536, 1, 262161, 65536, 1, 196625, 65536, 0, 327696, 65536, 1, 262160, 65536, 1, 196624, 65536, 0, 327695, 65536, 1, 262159, 65536, 1, 196623, 65536, 0, 327694, 65536, 1, 262158, 65536, 1, 196622, 65536, 0, 327693, 65536, 1, 262157, 65536, 1, 196621, 65536, 0, 327692, 65536, 1, 262156, 65536, 1, 196620, 65536, 0, 327691, 65536, 1, 262155, 65536, 1, 196619, 65536, 0, 327690, 65536, 1, 262154, 65536, 1, 196618, 65536, 0, 327689, 65536, 1, 262153, 65536, 1, 196617, 65536, 0, 327688, 65536, 1, 262152, 65536, 1, 196616, 65536, 0, 327687, 65536, 1, 262151, 65536, 1, 196615, 65536, 0, 327686, 65536, 1, 262150, 65536, 1, 196614, 65536, 0, 327685, 65536, 1, 262149, 65536, 1, 196613, 65536, 0, 327684, 65536, 1, 262148, 65536, 1, 196612, 65536, 0, 327683, 65536, 1, 262147, 65536, 1, 196611, 65536, 0, 327682, 65536, 1, 262146, 65536, 1, 196610, 65536, 0, 393217, 0, 1, 327681, 0, 1, 262145, 0, 1, 196609, 0, 0)

[node name="Door" parent="." instance=ExtResource("3_cnoc3")]
position = Vector2(104, 288)
new_level_path = "res://world/level_one.tscn"
connection = ExtResource("4_h4avt")

[node name="Door2" parent="." instance=ExtResource("3_cnoc3")]
position = Vector2(456, 288)
new_level_path = "res://world/level_three.tscn"
connection = ExtResource("5_fqs8o")

[node name="CameraLimits" parent="." instance=ExtResource("6_6drvt")]
offset_left = 112.0
offset_top = 168.0
offset_right = 448.0
offset_bottom = 348.0

[node name="BossEnemy" parent="." instance=ExtResource("6_ouelw")]
z_index = 1
position = Vector2(296, 240)
targets = Array[NodePath]([NodePath("../BossTarget"), NodePath("../BossTarget2"), NodePath("../BossTarget3"), NodePath("../BossTarget4"), NodePath("../BossTarget5")])

[node name="BossTarget" type="Marker2D" parent="."]
position = Vector2(232, 216)
rotation = -0.00283294

[node name="BossTarget2" type="Marker2D" parent="."]
position = Vector2(296, 256)
rotation = -0.00283294

[node name="BossTarget3" type="Marker2D" parent="."]
position = Vector2(352, 216)
rotation = -0.00283294

[node name="BossTarget4" type="Marker2D" parent="."]
position = Vector2(192, 264)
rotation = -0.00283294

[node name="BossTarget5" type="Marker2D" parent="."]
position = Vector2(392, 272)
rotation = -0.00283294

[node name="Bricks" type="Node2D" parent="."]
visible = false

[node name="Brick" parent="Bricks" instance=ExtResource("7_xog08")]
position = Vector2(112, 272)

[node name="Brick3" parent="Bricks" instance=ExtResource("7_xog08")]
position = Vector2(432, 272)

[node name="Brick4" parent="Bricks" instance=ExtResource("7_xog08")]
position = Vector2(432, 256)

[node name="Brick2" parent="Bricks" instance=ExtResource("7_xog08")]
position = Vector2(112, 256)

[node name="Trigger" parent="." instance=ExtResource("9_u1lwj")]
collision_mask = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Trigger"]
position = Vector2(1.52588e-05, -13.4591)
scale = Vector2(1, 1.03977)
polygon = PackedVector2Array(144, 224, 144, 312, 176, 312, 176, 224)

[connection signal="tree_exited" from="BossEnemy" to="." method="_on_boss_enemy_tree_exited"]
[connection signal="trigger_entered" from="Trigger" to="." method="_on_trigger_trigger_entered"]
